# downcast-rs

./: .gitattributes  .gitignore  Cargo.toml  README.md  rustfmt.toml
examples/: downcasted.rs  simple.rs  with_params.rs
src/: lib.rs
tests/: tests.rs
