[package]
name = "downcast"
version = "0.10.0"
authors = ["Felix Köpge <fkoep@mailbox.org>"]
license = "MIT"

description = "Trait for downcasting trait objects back to their original types."
documentation = "https://docs.rs/downcast"
repository = "https://github.com/fkoep/downcast-rs"
readme = "README.md"
keywords = ["any"]
categories = ["no-std", "rust-patterns"]

[features]
default = ["std"]
nightly = []
std = []
